# last-snow

./: Cargo.toml  Cross.toml
.github/workflows/: build.yml
src/: main.rs  store.rs
ui/: appwindow.slint
