[package]
name = "last-snow"
version = "0.3.1"
authors = ["krokosik <wikkra@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
csv = "1.3.0"
dirs = "5.0.1"
fern = "0.6.2"
log = "0.4.20"
rosc = "0.10.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
slint = "1.0"
strum = "0.25.0"
strum_macros = "0.25.3"

[build-dependencies]
slint-build = "1.0"
